# santiagomvc.github.io

./: .gitignore  .nojekyll  _quarto.yml  about.html  about.qmd  index.html  index.qmd  index.xml  listings.json  robots.txt  search.json  sitemap.xml  subscribe.html
posts/ai_risks_for_public_policy/: ai_risks_for_public_policy.html  ai_risks_for_public_policy.qmd
posts/anthropic_builder_day_02112024/: anthropic_builder_day_02112024.html  anthropic_builder_day_02112024.qmd
posts/applied_ml_development/: applied_ml_development.html  applied_ml_development.qmd
posts/claude_code_intro/: claude_code_intro.html  claude_code_intro.qmd  claude_code_intro.quarto_ipynb
posts/entity_matching_intro/: entity_matching_intro.html  entity_matching_intro.ipynb
posts/installing_torch_cpu_with_poetry/: installing_torch_cpu_with_poetry.html  installing_torch_cpu_with_poetry.md  installing_torch_cpu_with_poetry.qmd
posts/intro_to_search_algorithms/: intro_to_search_algorithms.html  intro_to_search_algorithms.ipynb
posts/intro_to_search_methods/: index.html  index.qmd  search_methods.html
posts/lm_decision_making_under_risk/: choices_data.csv  choices_data_with_responses.csv  lm_decision_making_under_risk.ipynb  lm_decision_making_under_risk.py  responses.csv
posts/ml_practice_building_features/: ml_practice_building_features.html  ml_practice_building_features.qmd
posts/post-with-code/: index.html  index.qmd
posts/quick_thoughts_on_openai_o3/: quick_thoughts_on_openai_o3.html  quick_thoughts_on_openai_o3.qmd
posts/structuring_mining_docs/: main.py  pyproject.toml
(+56 files in other folders)
